fable/test/valid/tab_syndrome.f
      program prog
                                                                     i=12
      write(6, *) i
                                                                    	i=34
      write(6, *) i
                                                                   		i=56
      write(6, *) i
      																																																															i=78
      write(6, *) i
 																																																															i=1234567
      write(6, *) i
      end
