fable/test/syntax_error/bad_implied_do_5.f
      program prog
      write(6, *) (i,0=1,2)
      end
